--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <div class="col-12">
                 <div class="left-part">
                   <div class="banner-content">
-                    <h1>Think Big: Make It Happen.</h1>
+                    <h1>Think Big: Make IT Happen.</h1>
                     <h6>
                       With more and better technology we all benefit,
                       our decentralized team of developers,
